Add update user endpoint Fixes #15
