# internal/handler/user_handler.go
@@ -101,3 +101,46 @@ func HandleCreateUser(c *fiber.Ctx, userService services.UserService) error {
 	c.Set("Location", locationUrl)
 	return c.JSON(map[string]string{"id": id.String()})
 }
+
+// HandleUpdateUser updates an existing user.
+//
+// @Summary      Update User
+// @Description  Update an application user
+// @Tags         Users
+// @Accept       json
+// @Produce      json
+// @Success      204
+// @Param        request body domain.UserUpdate true "Update User"
+// @Param        id path string true "User ID"
+// @Router       /api/users/:id [put]
+func HandleUpdateUser(c *fiber.Ctx, userService services.UserService) error {
+	user, err := getUserFromContext(c)
+	if err != nil {
+		return err
+	}
+
+	idString := c.Params("id")
+	userID, err := uuid.Parse(idString)
+
+	if err != nil {
+		return fmt.Errorf("%w: the id parameter was malformed or invalid", shared.ErrBadRequest)
+	}
+
+	var request domain.UserUpdate
+	err = c.BodyParser(&request)
+	if err != nil {
+		return fmt.Errorf("%w: the request body is malformed or invalid", shared.ErrBadRequest)
+	}
+
+	err = request.Validate()
+	if err != nil {
+		return err
+	}
+
+	err = userService.Update(user, userID, request)
+	if err != nil {
+		return err
+	}
+
+	return c.SendStatus(fiber.StatusNoContent)
+}
